# TimeTrackr

./: .gitignore  README.md  main.py  platform_support.py  pyproject.toml  requirements.txt  run.bat  run.command
macos/: appicon.py  install_mac_app.sh
tests/: test_helpers.py  test_placeholder.py  test_platform_support.py
